[project]
name = "d10streamlitapp"
version = "0.1.0"
description = "Application Streamlit afin d'analyser des données de vin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "narwhals==2.10.0",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "protobuf==6.33.0",
    "pyarrow==22.0.0",
    "pydeck==0.9.1",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.28.0",
    "smmap==5.0.2",
    "streamlit==1.50.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.2",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "uv==0.9.5",
    "watchdog==6.0.0",
]
